optimization of indentation and imports